--- a/index.html
+++ b/index.html
@@ -603,7 +603,7 @@
       }, e[o].l = 1 * new Date, c = t.createElement(a), i = t.getElementsByTagName(a)[0], c.async = 1, c.src = "https://www.google-analytics.com/analytics.js", i.parentNode.insertBefore(c, i)
     }(window, document, "script", 0, "ga"), ga("create", "UA-98294219-1", "auto"), ga("send", "pageview"));
   </script>
-  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   <div id="customizeBackground" class="newmodal_background" style="opacity: 0.8; display: none;"></div>
 </body>
 
