Update donations URLs

--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
                   </div><br>
                   <div class="bb_h1" style="top:8px; position: relative; text-align:center;">
                   <b>
-                    Our: <a class="bb_link" href="https://www.patreon.com/steamdesign" target="_blank" rel="noreferrer">Patreon</a> |
+                    Our: <a class="bb_link" href="https://paypal.me/steamdesign" target="_blank" rel="noreferrer">Donations</a> |
                     <a class="bb_link" href="https://github.com/sapic/sapic" target="_blank" rel="noreferrer">GitHub</a> |
                     <a class="bb_link" href="https://steamcommunity.com/groups/sapic" target="_blank" rel="noreferrer">Steam Group</a> |
                     <a class="bb_link" href="https://chrome.google.com/webstore/detail/steamdesign-buttons/mjmabgdoainclinjecbkdancpamdiaih">Chrome Extension</a>
