Fix social likes

--- a/index.html
+++ b/index.html
@@ -270,13 +270,13 @@
               </div>
               <div class="header_real_name_spacer">&nbsp;</div>
               <div class="profile_summary">
-                  <div class="social-likes" style="top:6px; left:4%; position: relative;" data-url="https://steam.design/" data-title="I made a cool Steam profile with this! It's so cool!">
-                    <div class="facebook" title="Share link on Facebook">&nbsp;Facebook</div>
-                    <div class="twitter" title="Share link on Twitter">&nbsp;Twitter</div>
-                    <div class="plusone" title="Share link on Google+">&nbsp;Google+</div>
-                    <div class="vkontakte" title="Share link on VK">&nbsp;VK</div>
-                  </div><br>
-                  <div class="bb_h1" style="top:8px; position: relative; text-align:center;">
+                <div class="social-likes" data-url="https://steam.design/" data-title="I made a cool Steam profile with this! It's so cool!">
+                  <div class="facebook" title="Share link on Facebook">&nbsp;Facebook</div>
+                  <div class="twitter" title="Share link on Twitter">&nbsp;Twitter</div>
+                  <div class="plusone" title="Share link on Google+">&nbsp;Google+</div>
+                  <div class="vkontakte" title="Share link on VK">&nbsp;VK</div>
+                </div><br>
+                <div class="bb_h1" style="top:8px; position: relative;">
                   <b>
                     Our: <a class="bb_link" href="https://paypal.me/steamdesign" target="_blank" rel="noreferrer">Donations</a> |
                     <a class="bb_link" href="https://github.com/sapic/sapic" target="_blank" rel="noreferrer">GitHub</a> |
