--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
   <meta charset="utf-8" />
   <title>Steam Background Cropper</title>
   <meta name="keywords" content="steam, profile, crop, steam profile, background crop, background crop tool, background, backgrounds, valve, steamdesign, design" />
-  <link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png">
-  <link rel="manifest" href="/images/manifest.json">
-  <link rel="mask-icon" href="/images/safari-pinned-tab.svg" color="#1b2838">
-  <link rel="shortcut icon" href="/images/favicon.ico">
+  <link rel="apple-touch-icon" sizes="180x180" href="./images/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="manifest" href="./images/manifest.json">
+  <link rel="mask-icon" href="./images/safari-pinned-tab.svg" color="#1b2838">
+  <link rel="shortcut icon" href="./images/favicon.ico">
   <meta name="apple-mobile-web-app-title" content="Steam.Design">
   <meta name="description" content="A small tool to crop Steam profile backgrounds to showcases. Make your profile awesome today!">
   <meta name="application-name" content="Steam.Design">
-  <meta name="msapplication-config" content="/images/browserconfig.xml">
+  <meta name="msapplication-config" content="./images/browserconfig.xml">
   <meta name="theme-color" content="#142436f">
   <meta name="google-site-verification" content="bohKQMzUSNTnkPrEz27bgyzAFbTAOWhFTgKwrnejHEE" />
   <!-- for Facebook -->
@@ -51,10 +51,8 @@
   </script>
   <!-- build:js /main.js -->
   <script src="./js/jquery.min.js"></script>
-  <script src="./js/linq.min.js"></script>
   <script src="./js/jquery.smooth-scroll.min.js"></script>
   <script src="./js/interact-1.2.9.min.js"></script>
-  <script src="./js/FileSaver.js"></script>
   <script src="./js/index.js"></script>
   <script src="./js/social-likes.min.js"></script>
   <script src="./js/store.everything.min.js"></script>
