Cleaned up gulpfile + html, removed duplicate file

--- a/index.html
+++ b/index.html
@@ -38,17 +38,11 @@
   <link href="./css/header.css" rel="stylesheet" type="text/css">
   <link href="./css/economy.css" rel="stylesheet" type="text/css">
   <link href="./css/economy_inventory.css" rel="stylesheet" type="text/css">
-  <link href="./css/font-awesome.min.css" rel="stylesheet" type="text/css">
+  <link href="./css/font-awesome.css" rel="stylesheet" type="text/css">
   <link href="./css/social-likes_flat.css" rel="stylesheet" type="text/css">
-  <link rel="stylesheet" href="./css/slider.css">
-  <link rel="stylesheet" href="./css/index.css">
+  <link href="./css/index.css" rel="stylesheet" type="text/css">
+  <link href="./css/slider.css" rel="stylesheet" type="text/css">
   <!-- endbuild -->
-  <script>
-    if (typeof module === 'object') {
-      window.module = module;
-      module = undefined;
-    }
-  </script>
   <!-- build:js /main.js -->
   <script src="./js/jquery.min.js"></script>
   <script src="./js/jquery.smooth-scroll.min.js"></script>
@@ -60,6 +54,12 @@
   <script src="./js/clipboard.js"></script>
   <!-- endbuild -->
   <script src="./fuckadblock.js"></script>
+  <script>
+    if (typeof module === 'object') {
+      window.module = module;
+      module = undefined;
+    }
+  </script>
   <script>
     if (window.module) module = window.module;
   </script>
