--- a/index.html
+++ b/index.html
@@ -558,9 +558,9 @@
   <div id="footer_spacer"></div>
   <div id="footer">
     <div class="footer_content">
-      <span id="footerLogo"><img src="https://steamcommunity-a.akamaihd.net/public/images/skin_1/footerLogo_valve.png" width="96" height="26" border="0" alt="Логотип Valve"></span>
+      <span id="footerLogo"><img src="./images/sapic.png" width="50" height="50" border="0" alt="Steam.Design" style="position:relative;left:40px;bottom:7px;"></span>
       <span id="footerText">
-            Powered by STEAM. <span id="version">Version #{{#vernum}}</span><br> Made with love by <a href="https://steamcommunity.com/id/truecarry">TrueCarry</a> and <a href="https://steamcommunity.com/id/theoddball">The Oddball</a><br>
+        Copyright © 2018 Steam.Design<br>Powered by STEAM. <span id="version">Version #{{#vernum}}</span><br> Made with love by <a href="https://steamcommunity.com/id/truecarry">TrueCarry</a> and <a href="https://steamcommunity.com/id/theoddball">The Oddball</a><br>
       </span>
     </div>
   </div>
