--- a/index.html
+++ b/index.html
@@ -547,6 +547,7 @@
           </div>
           </div>
         </div>
+        <div id="bottomAds"></div>
       </div>
       <div style="clear: both;"></div>
     </div>
