--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
               <div class="profile_summary_footer">
                 <div class="btn_profile_action btn_medium" id="getBg"><span>Get This Background</span></div>
                 <div class="btn_profile_action btn_medium" id="randomBG" style="left:3px; position:relative;"><span>Random BG</span></div>
-                <a class="btn_profile_action btn_medium saveButton" id="saveAll" style="left:6px; position:relative;"><span>Download ZIP</span></a>
+                <a class="btn_green_white_innerfade btn_medium saveButton" id="saveAll" style="left:6px; position:relative;"><span style="color:#ffffff">Download ZIP</span></a>
                 <!--<a class="btn_profile_action btn_medium" id="userScript" style="left:2px; position:relative;" href="https://chrome.google.com/webstore/detail/mjmabgdoainclinjecbkdancpamdiaih/"><span>Chrome Extension</span></a>-->
               </div>
             </div>
