fix theme color

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <meta name="description" content="A small tool to crop Steam profile backgrounds to showcases. Make your profile awesome today!">
   <meta name="application-name" content="Steam.Design">
   <meta name="msapplication-config" content="./images/browserconfig.xml">
-  <meta name="theme-color" content="#142436f">
+  <meta name="theme-color" content="#171a21">
   <meta name="google-site-verification" content="bohKQMzUSNTnkPrEz27bgyzAFbTAOWhFTgKwrnejHEE" />
   <!-- for Facebook -->
   <meta property="og:title" content="Steam Background Crop Tool" />
