--- a/index.html
+++ b/index.html
@@ -565,7 +565,7 @@
     </div>
   </div>
   <img id="bgImgEl" style="display:none">
-  <div id="bgPreloader"> </div>
+  <div id="bgPreloader" style="display:hidden;"></div>
 
   <div id="copiedNotification" class="copiedNotification">
     <div class="notificationBG">
