--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 </div>
                 <div class="bg_link">
                   <div class="gray_bevel for_text_input">
-                    <input class="dynInput" type="text" name="real_name" id="urlIn" size="30" placeholder="Paste a background URL here">
+                    <input class="dynInput bgUrl" type="text" name="real_name" id="urlIn" size="30" placeholder="Paste a background URL here">
                   </div>
                   <div class="btn_profile_action btn_medium" id="goUrl" style="left:4px; position:relative;">
                     <span>Change BG</span>
@@ -218,27 +218,6 @@
                                   <span class="commentthread_subscribe_check"></span>
                                 </span>
                                 <span class="commentthread_subscribe_desc">Enable Workshop Showcase</span>
-                              </div>
-                            </div>
-                            <div class="market_listing_row market_recent_listing_row">
-                              <div class="bb_h1 customize_textbox">
-                                <b>Additional Options:</b>
-                              </div>
-                              <div id="esColors" style="margin-left:5px;margin-top:5px;">
-                                <a href="https://www.enhancedsteam.com/" target="_blank">Enhanced Steam Colors:&nbsp;</a>
-                                <select id="colorChange" onchange="esColorLoad(this)">
-                                  <option value="0">Default</option>
-                                  <option value="1">Blue</option>
-                                  <option value="2">Clear</option>
-                                  <option value="3">Green</option>
-                                  <option value="4">Holiday 2014</option>
-                                  <option value="5">Orange</option>
-                                  <option value="6">Pink</option>
-                                  <option value="7">Purple</option>
-                                  <option value="8">Red</option>
-                                  <option value="9">Teal</option>
-                                  <option value="10">Yellow</option>
-                                </select>
                               </div>
                             </div>
                             <div class="market_listing_row market_recent_listing_row">
