--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
               </div>
               <div class="profile_header_badgeinfo">
                 <div class="profile_header_badgeinfo_badge_area">
-                  <div class="profile_header_badge" style="position:relative;top:9px;">
+                  <div class="profile_header_badge">
                     <a href="https://discord.gg/jnqnHuX" target="_blank"><img src="https://discordapp.com/api/guilds/304986224467378177/widget.png?style=banner2"
                         style="height: 87%;top: 4px;left: 5px;position: relative;"></a>
                   </div>
@@ -243,10 +243,8 @@
                     </div>
                   </div>
                 </div>
-                <div class="btn_profile_action btn_medium" style="left:7px; position:relative;top:9px;" onclick="toggleCustomize()"
-                  id="openCustomizeButton">
-                  <span style=" text-align:center; ">Customize Cropping</span>
-                </div>
+                <a class="btn_green_white_innerfade btn_medium saveButton" id="saveAll" style="left:6px; position:relative;"><span
+                  style="color:#ffffff">Download Images</span></a>
               </div>
             </div>
             <div class="profile_header_summary">
@@ -274,11 +272,12 @@
                 </div>
               </div>
               <div class="profile_summary_footer">
-                <div class="btn_profile_action btn_medium" id="getBg"><span>Get This Background</span></div>
+                <div class="btn_profile_action btn_medium" id="getBg"><span>Get This BG</span></div>
                 <div class="btn_profile_action btn_medium" id="randomBG" style="left:3px; position:relative;"><span>Random
                     BG</span></div>
-                <a class="btn_green_white_innerfade btn_medium saveButton" id="saveAll" style="left:6px; position:relative;"><span
-                    style="color:#ffffff">Download ZIP</span></a>
+                <div class="btn_profile_action btn_medium" style="left:7px; position:relative;" onclick="toggleCustomize()" id="openCustomizeButton">
+                  <span style=" text-align:center; ">Customize Cropping</span>
+                </div>
                 <!--<a class="btn_profile_action btn_medium" id="userScript" style="left:2px; position:relative;" href="https://chrome.google.com/webstore/detail/mjmabgdoainclinjecbkdancpamdiaih/"><span>Chrome Extension</span></a>-->
               </div>
             </div>
