Update OG tags to fix small bug

--- a/index.html
+++ b/index.html
@@ -14,19 +14,19 @@
   <meta name="description" content="A small tool to crop Steam profile backgrounds to showcases. Make your profile awesome today!">
   <meta name="application-name" content="Steam.Design">
   <meta name="msapplication-config" content="./images/browserconfig.xml">
-  <meta name="theme-color" content="#171a21">
+  <meta name="theme-color" content="#12151a">
   <meta name="google-site-verification" content="bohKQMzUSNTnkPrEz27bgyzAFbTAOWhFTgKwrnejHEE" />
   <!-- for Facebook -->
-  <meta property="og:title" content="Steam Background Crop Tool" />
+  <meta property="og:title" content="Steam.Design" />
   <meta property="og:type" content="website" />
-  <meta property="og:image" content="http://i.oddball.tf/4gOWxN.png" />
+  <meta property="og:image" content="https://i.oddball.tf/4uTWA.png" />
   <meta property="og:url" content="https://steam.design/" />
   <meta property="og:description" content="A small tool to crop Steam profile backgrounds to showcases." />
   <!-- for Twitter -->
   <meta name="twitter:card" content="summary" />
-  <meta name="twitter:title" content="Steam Background Crop Tool" />
+  <meta name="twitter:title" content="Steam.Design" />
   <meta name="twitter:description" content="A small tool to crop Steam profile backgrounds to showcases." />
-  <meta name="twitter:image" content="http://i.oddball.tf/4gOWxN.png" />
+  <meta name="twitter:image" content="https://i.oddball.tf/4uTWA.png" />
   <meta name="twitter:url" content="https://steam.design/" />
   <!-- build:css /main.css -->
   <link href="./css/motiva_sans.css" rel="stylesheet" type="text/css">
