add download shadow

--- a/index.html
+++ b/index.html
@@ -243,8 +243,10 @@
                     </div>
                   </div>
                 </div>
-                <a class="btn_green_white_innerfade btn_medium saveButton" id="saveAll" style="left:6px; position:relative;"><span
-                  style="color:#ffffff">Download Images</span></a>
+                <a class="btn_green_white_innerfade btn_medium saveButton" id="saveAll" style="left:6px; position:relative;">
+                <div class="saveButtonShadow"></div>
+                <span style="color:#ffffff">Download Images</span>
+                </a>
               </div>
             </div>
             <div class="profile_header_summary">
@@ -275,7 +277,8 @@
                 <div class="btn_profile_action btn_medium" id="getBg"><span>Get This BG</span></div>
                 <div class="btn_profile_action btn_medium" id="randomBG" style="left:3px; position:relative;"><span>Random
                     BG</span></div>
-                <div class="btn_profile_action btn_medium" style="left:7px; position:relative;" onclick="toggleCustomize()" id="openCustomizeButton">
+                <div class="btn_profile_action btn_medium" style="left:7px; position:relative;" onclick="toggleCustomize()"
+                  id="openCustomizeButton">
                   <span style=" text-align:center; ">Customize Cropping</span>
                 </div>
                 <!--<a class="btn_profile_action btn_medium" id="userScript" style="left:2px; position:relative;" href="https://chrome.google.com/webstore/detail/mjmabgdoainclinjecbkdancpamdiaih/"><span>Chrome Extension</span></a>-->
