--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
   <!-- for Facebook -->
   <meta property="og:title" content="Steam.Design" />
   <meta property="og:type" content="website" />
-  <meta property="og:image" content="https://i.oddball.tf/4uTWA.png" />
+  <meta property="og:image" content="https://i.oddball.tf/G3HPm.png" />
   <meta property="og:url" content="https://steam.design/" />
   <meta property="og:description" content="A small tool to crop Steam profile backgrounds to showcases." />
   <!-- for Twitter -->
-  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Steam.Design" />
   <meta name="twitter:description" content="A small tool to crop Steam profile backgrounds to showcases." />
-  <meta name="twitter:image" content="https://i.oddball.tf/4uTWA.png" />
+  <meta name="twitter:image" content="https://i.oddball.tf/G3HPm.png" />
   <meta name="twitter:url" content="https://steam.design/" />
   <!-- build:css /main.css -->
   <link href="./css/motiva_sans.css" rel="stylesheet" type="text/css">
