Change Discord banner look and round out some corners

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <meta name="twitter:description" content="A small tool to crop Steam profile backgrounds to showcases." />
   <meta name="twitter:image" content="https://i.oddball.tf/G3HPm.png" />
   <meta name="twitter:url" content="https://steam.design/" />
-  <!-- build:css /main.css -->
+  <!-- build:css ./main.css -->
   <link href="./css/motiva_sans.css" rel="stylesheet" type="text/css">
   <link href="./css/buttons.css" rel="stylesheet" type="text/css">
   <link href="./css/shared_global.css" rel="stylesheet" type="text/css">
@@ -43,7 +43,7 @@
   <link href="./css/slider.css" rel="stylesheet" type="text/css">
   <link href="./css/newui.css" rel="stylesheet" type="text/css">
   <!-- endbuild -->
-  <!-- build:js /main.js -->
+  <!-- build:js ./main.js -->
   <script src="./js/jquery.min.js"></script>
   <script src="./js/jquery.smooth-scroll.min.js"></script>
   <script src="./js/interact-1.2.9.min.js"></script>
@@ -112,10 +112,7 @@
               </div>
               <div class="profile_header_badgeinfo">
                 <div class="profile_header_badgeinfo_badge_area">
-                  <div class="profile_header_badge">
-                    <a href="https://discord.gg/jnqnHuX" target="_blank"><img src="https://discordapp.com/api/guilds/304986224467378177/widget.png?style=banner2"
-                        style="height: 87%;top: 4px;left: 5px;position: relative;"></a>
-                  </div>
+                    <a href="https://discord.gg/jnqnHuX" target="_blank"><img class="discordImage" src="https://discordapp.com/api/guilds/304986224467378177/widget.png?style=banner2"></a>
                 </div>
                 <div class="profile_header_actions" style="position:relative">
                   <div id="customize" class="newmodal" style="position: fixed; z-index: 1000; left: 50%; top: 15%; display: none; transform: translateX(-50%);">
