Change donations to ko-fi

--- a/index.html
+++ b/index.html
@@ -253,15 +253,14 @@
               </div>
               <div class="header_real_name_spacer">&nbsp;</div>
               <div class="profile_summary">
+                  <script type='text/javascript' src='https://ko-fi.com/widgets/widget_2.js'></script><script type='text/javascript'>kofiwidget2.init('Support Us on Ko-fi', '#08090b', 'H2H8NYMB');kofiwidget2.draw();</script>
                 <div class="social-likes" data-url="https://steam.design/" data-title="I made a cool Steam profile with this! It's so cool!">
-                  <div class="facebook" title="Share link on Facebook">&nbsp;Facebook</div>
                   <div class="twitter" title="Share link on Twitter">&nbsp;Twitter</div>
                   <div class="vkontakte" title="Share link on VK">&nbsp;VK</div>
-                </div><br>
-                <div class="bb_h1" style="top:8px; position: relative;">
+                </div> 
+                <div class="bb_h1" style="top:8px; position: relative; left: 38px;">
                   <b>
-                    Our: <a class="bb_link" href="https://paypal.me/steamdesign" target="_blank" rel="noreferrer">Donations</a>
-                    |
+                    Our:
                     <a class="bb_link" href="https://github.com/sapic/sapic" target="_blank" rel="noreferrer">GitHub</a>
                     |
                     <a class="bb_link" href="https://steamcommunity.com/groups/sapic" target="_blank" rel="noreferrer">Steam
