--- a/index.html
+++ b/index.html
@@ -432,11 +432,7 @@
           <div class="underfr" width="268"></div>
           <div class="profile_group_links profile_count_link_preview_ctn responsive_groupfriends_element">
             <div class="profile_count_link ellipsis">
-              <a href="https://steamcommunity.com/id/wolfenstian/groups/">
-                <span class="count_link_label">Partners of Steam.Design</span>&nbsp;
-                <span class="profile_count_link_total">
-                  3 </span>
-              </a>
+                <span class="partnerLabel">Our Partners</span>
             </div>
             <div class="profile_count_link_preview">
               <div class="profile_group profile_primary_group">
@@ -445,8 +441,7 @@
                     <img src="https://steamcdn-a.akamaihd.net/steamcommunity/public/images/avatars/f4/f4b94e8c28be9b33d6abf3a4f3a5ff5fcd43be82_medium.jpg">
                   </a>
                 </div>
-                <a class="whiteLink" href="https://www.steamladder.com/">
-                  Steam Ladder </a>
+                <a class="whiteLink" href="https://www.steamladder.com/">Steam Ladder</a>
                 <div class="profile_group_membercount">Leaderboard and ranking site for Steam profiles!</div>
                 <div style="clear: left;"></div>
               </div>
@@ -456,9 +451,8 @@
                     <img src="https://steamcdn-a.akamaihd.net/steamcommunity/public/images/avatars/07/07371a76a92abf8fb481a8921b9f0888012e1a4f_medium.jpg">
                   </a>
                 </div>
-                <a class="whiteLink" href="https://steamcommunity.com/groups/FreeArtwork">
-                  Free Artwork </a>
-                <div class="profile_group_membercount">A bot that makes free animated art for your showcase!</div>
+                <a class="whiteLink" href="https://steamcommunity.com/groups/FreeArtwork">Free Artwork</a>
+                <div class="profile_group_membercount">A bot that makes free animated art!</div>
                 <div style="clear: left;"></div>
               </div>
               <div class="profile_group profile_primary_group">
@@ -466,9 +460,8 @@
                   <a href="https://steamcommunity.com/groups/ArtworkProfiles">
                     <img src="https://steamcdn-a.akamaihd.net/steamcommunity/public/images/avatars/a8/a8dbf5dc460745146602a2e9b61b25d7aebfed09_medium.jpg">
                   </a> </div>
-                <a class="whiteLink" href="https://steamcommunity.com/groups/ArtworkProfiles">
-                  Artwork Profiles </a>
-                <div class="profile_group_membercount">Celebrating the Beauty of Steam Profiles.</div>
+                <a class="whiteLink" href="https://steamcommunity.com/groups/ArtworkProfiles">Artwork Profiles</a>
+                <div class="profile_group_membercount">Celebrating the beauty of Steam profiles.</div>
 
                 <div style="clear: left;"></div>
               </div>
