Change video guide to new steam guide

--- a/index.html
+++ b/index.html
@@ -73,8 +73,7 @@
     <div class="content" id="cardsList">
       <div style="margin-top: 5px;">
         <span class="filter" style="float:left; position:relative; display:none;">Filter: <input type="text" id="filterIn"></span>
-        <span class="guide" style="float:left; position:relative; left:23%;"><a class="top_hint" href="https://youtube.com/watch?v=MVws18QLOi8">Video
-            Guide!</a></span>
+        <span class="guide" style="float:left; position:relative; left:23%;"><a class="top_hint" href="https://steamcommunity.com/sharedfiles/filedetails/?id=299701202">Our Guide!</a></span>
         <div id="invbuttons" style="float:right;margin-bottom:9px;">
           <div id="refreshInventory" class="fa fa-refresh" title="Refresh Inventory" style="position:relative; top:2px; left:-20px; cursor:pointer; display:none;"></div>
           <div id="hideBacksList" class="fa fa-arrow-up" title="Hide Inventory" style="position:relative; top:2px; left:-15px; cursor:pointer; display:none;"></div>
