Update customize cropping modal

--- a/src/index.html
+++ b/src/index.html
@@ -116,9 +116,10 @@
                 </div>
                 <div class="profile_header_actions" style="position:relative">
                   <div id="customize" class="newmodal" style="position: fixed; z-index: 1000; left: 50%; top: 15%; display: none; transform: translateX(-50%);">
+                    <div class="modal_top_bar"></div>
                     <div class="newmodal_header_border">
                       <div class="newmodal_header">
-                        <span>Customize Cropping</span>
+                        <span class="title_text">Customize Cropping</span>
                         <div id="customizeClose" class="newmodal_close" />
                       </div>
                     </div>
