Update workshop showcase to 5 items

--- a/src/index.html
+++ b/src/index.html
@@ -375,45 +375,36 @@
                 Workshop Showcase
               </div>
               <div class="myworkshop_showcase_header">
-                <div class="playerAvatar online">
-                  <a href="https://steamcommunity.com/id/wolfenstian/" data-miniprofile="68667764"><img src="https://steamcdn-a.akamaihd.net/steamcommunity/public/images/avatars/cc/cc2ba4deaf53f2b916efa115de2437c87dfe9cf2_medium.jpg"></a>
-                </div>
-                <a href="https://steamcommunity.com/id/wolfenstian/myworkshopfiles/" class="myworkshop_playerName">
-                  SloWolfe's Workshop </a>
               </div>
               <div class="profile_customization_block">
                 <div class="myworkshop_showcase">
                   <div class="workshop_showcase_mutiitem_ctn">
                     <div class="workshop_showcase_multiitem showcase_slot ">
-                      <div id="w1" style="height:150px;"></div>
+                      <div id="w1" style="height:119px;"></div>
                     </div>
                   </div>
                   <div class="workshop_showcase_mutiitem_ctn">
                     <div class="workshop_showcase_multiitem showcase_slot ">
-                      <div id="w2" style="height:150px;"></div>
+                      <div id="w2" style="height:119px;"></div>
                     </div>
                   </div>
                   <div class="workshop_showcase_mutiitem_ctn">
                     <div class="workshop_showcase_multiitem showcase_slot ">
-                      <div id="w3" style="height:150px;"></div>
+                      <div id="w3" style="height:119px;"></div>
                     </div>
                   </div>
                   <div class="workshop_showcase_mutiitem_ctn">
                     <div class="workshop_showcase_multiitem showcase_slot ">
-                      <div id="w4" style="height:150px;"></div>
+                      <div id="w4" style="height:119px;"></div>
+                    </div>
+                  </div>
+                  <div class="workshop_showcase_mutiitem_ctn">
+                    <div class="workshop_showcase_multiitem showcase_slot ">
+                      <div id="w5" style="height:119px;"></div>
                     </div>
                   </div>
                   <div style="clear: left;"></div>
-                  <div class="showcase_stats_row showcase_content_bg">
-                    <a class="showcase_stat" href="https://steamcommunity.com/id/wolfenstian/myworkshopfiles/">
-                      <div class="value">0</div>
-                      <div class="label">Submissions</div>
-                    </a>
-                    <div class="showcase_stat">
-                      <div class="value">147</div>
-                      <div class="label">Followers</div>
-                    </div>
-                    <div style="clear: left;"></div>
+                  <div class="showcase_stats_row showcase_content_bg" style="height:70px;">
                   </div>
                 </div>
               </div>
