Added link to safe designer list

--- a/src/index.html
+++ b/src/index.html
@@ -20,14 +20,14 @@
   <!-- for Facebook -->
   <meta property="og:title" content="Steam.Design" />
   <meta property="og:type" content="website" />
-  <meta property="og:image" content="https://i.oddball.tf/G3HPm.png" />
+  <meta property="og:image" content="https://i.oddball.tf/WFODru7.png" />
   <meta property="og:url" content="https://steam.design/" />
   <meta property="og:description" content="A small tool to crop Steam profile backgrounds to showcases." />
   <!-- for Twitter -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Steam.Design" />
   <meta name="twitter:description" content="A small tool to crop Steam profile backgrounds to showcases." />
-  <meta name="twitter:image" content="https://i.oddball.tf/G3HPm.png" />
+  <meta name="twitter:image" content="https://i.oddball.tf/WFODru7.png" />
   <meta name="twitter:url" content="https://steam.design/" />
   <!-- build:css ./main.css -->
   <link href="./css/motiva_sans.css" rel="stylesheet" type="text/css">
@@ -415,10 +415,25 @@
           <div class="rColAds"></div>
           <div class="underfr" width="268"></div>
           <div class="profile_group_links profile_count_link_preview_ctn responsive_groupfriends_element">
-            <div class="profile_count_link ellipsis">
+              <div class="profile_count_link ellipsis">
+                  <span class="partnerLabel">Our Other Projects</span>
+                </div>
+                <div class="profile_count_link_preview" style="margin-top:25px">
+                  <div class="profile_group profile_primary_group">
+                    <div class="profile_group_avatar">
+                      <a href="https://designerlist.guide/">
+                        <img src="https://i.oddball.tf/AspGoS4.jpg" width="64">
+                      </a>
+                    </div>
+                    <a class="whiteLink" href="https://www.steamladder.com/">Safe Designer List</a>
+                    <div class="profile_group_membercount">A list of safe, verified artwork designers on Steam.</div>
+                    <div style="clear: left;"></div>
+                  </div>
+                </div>
+            <div class="profile_count_link ellipsis" style="margin-top:25px">
               <span class="partnerLabel">Our Partners</span>
             </div>
-            <div class="profile_count_link_preview">
+            <div class="profile_count_link_preview" style="margin-top:25px">
               <div class="profile_group profile_primary_group">
                 <div class="profile_group_avatar">
                   <a href="https://www.steamladder.com/">
