Fixed Safe Designer List url

--- a/src/index.html
+++ b/src/index.html
@@ -425,7 +425,7 @@
                         <img src="https://i.oddball.tf/AspGoS4.jpg" width="64">
                       </a>
                     </div>
-                    <a class="whiteLink" href="https://www.steamladder.com/">Safe Designer List</a>
+                    <a class="whiteLink" href="https://designerlist.guide/">Safe Designer List</a>
                     <div class="profile_group_membercount">A list of safe, verified artwork designers on Steam.</div>
                     <div style="clear: left;"></div>
                   </div>
