Fix bottom of image resizer and add checkmark on download button

--- a/src/index.html
+++ b/src/index.html
@@ -234,7 +234,7 @@
                 </div>
                 <a class="btn_green_white_innerfade btn_medium saveButton" id="saveAll" style="left:6px; position:relative;">
                   <div class="saveButtonShadow"></div>
-                  <span style="color:#ffffff">Download Images</span>
+                  <span style="color:#ffffff"><div class="fa fa-check-circle"></div> Download Images</span>
                 </a>
               </div>
             </div>
@@ -295,7 +295,9 @@
                   <input id="AWSC_Location" class="locationvar hidden" value="1">
                   <div class="screenshot_showcase_primary showcase_slot ">
                     <div class="screenshot_showcase_screenshot resizable-awsc" id="hBig1" style="height: 506px;">
-                      <div id="big1" class="imageHolder"></div>
+                      <div id="big1" class="imageHolder">
+                        <div class="imageGrabber"></div>
+                      </div>
                     </div>
                     <div class="screenshot_showcase_itemname" style="color: #5491cf; font-weight: bold;">
                       <span>Drag bottom of image to resize&nbsp;
