--- a/src/index.html
+++ b/src/index.html
@@ -461,7 +461,7 @@
         <div class="footer_content">
             <span id="footerLogo"><img src="./images/sapic.png" width="50" height="50" border="0" alt="Steam.Design" style="position:relative;left:40px;bottom:7px;"></span>
             <span id="footerText">
-        Copyright © 2018 Steam.Design<br>Powered by STEAM. <span id="version">Version #{{#vernum}}</span><br> Made with love by <a href="https://steamcommunity.com/id/truecarry">TrueCarry</a> and <a href="https://steamcommunity.com/id/theoddball">The
+        Copyright © 2019 Steam.Design<br>Powered by Steam. <span id="version">Version #{{#vernum}}</span><br> Made with love by <a href="https://steamcommunity.com/id/truecarry">TrueCarry</a> and <a href="https://steamcommunity.com/id/theoddball">The
           Oddball</a><br>
             </span>
         </div>
