--- a/public/index.html
+++ b/public/index.html
@@ -7,28 +7,28 @@
     <meta charset="utf-8">
     <title>Steam.Design</title>
     <meta name="keywords" content="steam, profile, crop, steam profile, background crop, background crop tool, background, backgrounds, valve, steamdesign, design">
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.c4a795ed.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.3f22c293.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="manifest" href="/manifest.webmanifest">
-    <link rel="mask-icon" href="/safari-pinned-tab.fe453835.svg" color="#12151a">
-    <link rel="shortcut icon" href="/favicon.44b6b90f.ico">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#12151a">
+    <link rel="shortcut icon" href="/favicon.ico">
     <link href="https://steamcdn-a.akamaihd.net" rel="preconnect" crossorigin="">
     <meta name="apple-mobile-web-app-title" content="Steam.Design">
     <meta name="description" content="A small tool to crop Steam profile backgrounds to showcases. Make your profile awesome today!">
     <meta name="application-name" content="Steam.Design">
-    <meta name="msapplication-config" content="/browserconfig.986aec3a.xml">
+    <meta name="msapplication-config" content="/browserconfig.xml">
     <meta name="msapplication-TileColor" content="#12151a">
     <meta name="theme-color" content="#12151a">
     <meta name="google-site-verification" content="bohKQMzUSNTnkPrEz27bgyzAFbTAOWhFTgKwrnejHEE">
     <meta property="og:title" content="Steam.Design">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="/SocialBanner.4530f920.png">
+    <meta property="og:image" content="/SocialBanner.png">
     <meta property="og:url" content="https://steam.design/">
     <meta property="og:description" content="A small tool to crop Steam profile backgrounds to showcases.">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Steam.Design">
     <meta name="twitter:description" content="A small tool to crop Steam profile backgrounds to showcases.">
-    <meta name="twitter:image" content="/SocialBanner.4530f920.png">
+    <meta name="twitter:image" content="/SocialBanner.png">
     <meta name="twitter:url" content="https://steam.design/">
   </head>
 
