--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,9 @@
     <meta name="twitter:image" content="/SocialBanner.png">
     <meta name="twitter:url" content="https://steam.design/">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
+
+    <link rel="alternate" hrefLang="en" href="https://steam.design/en/" />
+    <link rel="alternate" hrefLang="ru" href="https://steam.design/ru/" />
   </head>
 
   <body>
