--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
   <meta name="viewport"
     content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
 
+  <link rel="canonical" href="https://steam.design/" />
   <link rel="alternate" hrefLang="en" href="https://steam.design/en/" />
   <link rel="alternate" hrefLang="ru" href="https://steam.design/ru/" />
 </head>
